styles.css
html {
  min-height: 100vh;
}
body {
  min-height: 100vh;
}

body {
  margin: 0;
  font-family: "Roboto", sans-serif;
  background-color: #232323 !important;
}

#header-wrapper {
  height: 80px;
  width: 100%;
  background-color: #232323;
  display: flex;
  justify-content: center;
  align-items: center;
  position: fixed;
  top: 0;
  z-index: 1000;
}

#header {
  width: 85%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

#site-logo {
  height: 50px;
  width: 150px;
  background-image: url("./assets/images/numbrz_logo_white.png");
  background-repeat: no-repeat;
  background-size: 150px 40px;
  margin-top: 10px;
}

#content-wrapper {
  display: flex;
  flex-direction: row;
  width: 100%;
  height: 100%;
  margin: 0;
  background-color: white;
  padding-top: 100px;
}

#wrapper {
  display: block;
  width: 100%;
  height: 100%;
  margin: 0;
}

#content {
  flex: 3;
  padding: 40px 100px 100px 100px;
  height: 100%;
  overflow-y: scroll;
}

#content h1 {
  padding: 0 0 20px 20px;
}

#content h2,
#content h3,
#content h4,
#content p {
  padding-left: 20px;
}

#content p {
  font-size: 1.1em;
}

#content img {
  margin: 20px;
  padding: 10px;
}

#content i {
  margin-left: 20px;
}

#content h3,
#content h4 {
  font-weight: 100;
}
#content .list {
  margin-left: 40px;
}

#sidebar-right {
  width: 25%;
  background-color: #f2f2f2;
  border-left: 1px solid rgb(219, 219, 220);
}

#sidebar-right .accordion {
  list-style-type: none;
  margin-top: 40px;
  margin-left: 15px;
  padding-inline-start: 0;
  position: fixed;
  top: 100px;
  padding-right: 10px;
}

#sidebar-right .bulleted {
  margin-left: 40px;
}

#sidebar-right .accordion a {
  text-decoration: none;
  word-wrap: break-word;
}

#sidebar-right .accordion a:hover {
  color: #76b7ff;
}

#footer-wrapper {
  position: fixed;
  left: 0;
  bottom: 0;
  width: 100%;
  height: 60px;
  display: flex;
  background-color: #232323;
  color: white;
  padding: 0 80px;
  align-items: center;
  justify-content: space-between;
}
#footer-wrapper p {
  margin: 0;
  padding: 0;
}

#nav {
  width: 220px;
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
}

#nav a {
  color: white;
  text-transform: uppercase;
  text-decoration: none;
}
#nav a:hover {
  color: #76b7ff;
}

#nav a.active {
  color: #76b7ff;
}

